<resources>
    <string name="app_name">College Schedule Lite</string>
    <string name="terms">Terms</string>
    <string name="welcome_message">Welcome to College Schedule Lite</string>
    <string name="my_terms">My Terms</string>
    <string name="add_term">Add term</string>
    <string name="terms_scroll">Terms scroll</string>
    <string name="term">Term</string>
    <string name="courses">Courses</string>
    <string name="term_courses_label">%1$s Courses</string>
    <string name="all_courses_label">All Courses</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_data">No Data</string>
    <string name="current_term_label"><b>Current Term:</b></string>
    <string name="remaining_terms_label"><b>Remaining Terms:</b></string>
    <string name="in_progress_label"><b>In-progress:</b></string>
    <string name="completed_label"><b>Completed:</b></string>
    <string name="dropped_label"><b>Dropped:</b></string>
    <string name="planned_label"><b>Plan to Take:</b></string>
    <string name="completed_terms"><b>Completed Terms:</b></string>
    <string name="start_date_label"><b>Start date:</b></string>
    <string name="end_date_label"><b>End date:</b></string>
    <string name="name_field_label"><b>Name:</b></string>
    <string name="term_name_hint">Fall 2021</string>
    <string name="start_date"><b>Start Date:</b></string>
    <string name="start_date_hint">Select start date</string>
    <string name="end_date_hint">Select end date</string>
    <string name="end_date"><b>End Date:</b></string>
    <string name="view_courses">View Courses</string>
    <string name="edit_term">Edit Term</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="assessments">Assessments</string>
    <string name="title_heading"><b>Title</b></string>
    <string name="status_heading"><b>Status</b></string>
    <string name="start_heading"><b>Start</b></string>
    <string name="term_heading"><b>Term</b></string>
    <string name="edit">Edit</string>
    <string name="add_course">Add Course</string>
    <string name="title_field_label"><b>Title:</b></string>
    <string name="term_field_label"><b>Term:</b></string>
    <string name="status_field_label"><b>Status:</b></string>
    <string name="instructor_name_field_label"><b>Instructor Name:</b></string>
    <string name="instructor_email_field_label"><b>Instructor Email:</b></string>
    <string name="instructor_phone_field_label"><b>Instructor Phone:</b></string>
    <string name="my_courses">My Courses</string>
    <string name="notes_heading"><b>Notes:</b></string>
    <string name="assessments_heading"><b>Assessments:</b></string>
    <string name="delete">Delete</string>
    <string name="title_hint">ABM2 TASK 1</string>
    <string name="date_field_label"><b>Date:</b></string>
    <string name="type_field_label"><b>Type:</b></string>
    <string name="time_field_label"><b>Time:</b></string>
    <string name="course_notice">Note: Notifications will be sent every 15 minutes starting one week before the course start date</string>
    <string name="assessment_notice">Note: Notifications will be sent every 15 minutes starting one week before the Assessment start date</string>
    <string name="course_field_label"><b>Course:</b></string>
    <string name="date_time_field_label"><b>Date/Time:</b></string>
    <string name="note_field_label"><b>Note:</b></string>
    <string name="add_note_hint">Enter course note</string>
    <string name="my_assessments">My Assessments</string>
    <string name="start_date_field_label"><b>Start Date:</b></string>
    <string name="end_date_field_label"><b>End Date:</b></string>
    <string name="enable_alerts"><b>Enable alerts?</b> (alerts will fire every 15 minutes starting one week from the start and end date)</string>
</resources>