<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Terms">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="672dp"
        android:contentDescription="@string/terms_scroll"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:text="@string/term" />

            <TextView
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:text="@string/courses" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:clickable="true"
                android:contentDescription="@string/add_term"
                android:onClick="onAddTermButtonClick"
                app:backgroundTint="#375CE1"
                app:fabSize="auto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

</RelativeLayout>