<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddEditCourseActivity">

    <TextView
        android:id="@+id/courseTitleLabel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="42dp"
        android:gravity="right|center_vertical"
        android:text="@string/title_field_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseStartDateLabel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/start_date"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:gravity="right|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTitleLabel" />

    <TextView
        android:id="@+id/courseEndDateLabel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/end_date"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:gravity="right|center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseStartDateLabel" />

    <EditText
        android:id="@+id/courseTitleData"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:hint="@string/course_title_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/courseTitleLabel"
        app:layout_constraintTop_toTopOf="@+id/courseTitleLabel" />

    <TextView
        android:id="@+id/courseStartDateData"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:hint="@string/start_date_hint"
        android:onClick="showStartDatePickerDialog"
        app:layout_constraintStart_toEndOf="@+id/courseStartDateLabel"
        app:layout_constraintTop_toTopOf="@+id/courseStartDateLabel"
        app:drawableLeftCompat="@drawable/ic_calendar_foreground" />

    <TextView
        android:id="@+id/courseEndDateData"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical"
        android:hint="@string/end_date_hint"
        android:onClick="showEndDatePickerDialog"
        app:layout_constraintStart_toEndOf="@+id/courseEndDateLabel"
        app:layout_constraintTop_toTopOf="@+id/courseEndDateLabel"
        app:drawableLeftCompat="@drawable/ic_calendar_foreground" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_700"
        android:onClick="onSaveButtonClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:backgroundTint="@android:color/darker_gray"
        android:onClick="onCancelButtonClick"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="@+id/saveButton"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>