<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CourseListActivity">

    <LinearLayout
        android:id="@+id/coursesListHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/coursesListTitleHead"
            android:layout_width="0dp"
            android:layout_weight=".365"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:text="@string/title_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#37474F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/coursesListStatusHead"
            android:layout_width="0dp"
            android:layout_weight=".31"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:text="@string/status_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#37474F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/coursesListStartHead"
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            android:text="@string/start_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="#37474F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </LinearLayout>

    <ListView
        android:id="@+id/coursesListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coursesListHead" >
    </ListView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addCourseFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:contentDescription="@string/add_term"
        android:onClick="onAddCourseFABClick"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/green"
        app:fabSize="auto"
        app:layout_constraintBottom_toTopOf="@+id/navFragment"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navFragment"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        class="android.wgunn.collegeschedulelite.UI.NavFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>